--- a/src/index.html
+++ b/src/index.html
@@ -9,29 +9,7 @@
   <div id="pageContent">
     <div class="search-container">
       <h1 id="mainTitle">
-        <!-- <span class="gBlue">t</span>
-        <span class="gRed">h</span>
-        <span class="gYellow">e</span>
-        <span class="gBlue"> b</span>
-        <span class="gGreen">i</span>
-        <span class="gRed">g</span>
-        <span class="gBlue"> b</span>
-        <span class="gRed">a</span>
-        <span class="gYellow">n</span>
-        <span class="gBlue">g</span> -->
-        <span class="gBlue">e</span>
-        <span class="gRed">t</span>
-        <span class="gYellow">h</span>
-        <span class="gBlue">a</span>
-        <span class="gGreen">n</span>
-        <span class="gRed">'</span>
-        <span class="gBlue">s</span>
-        <span class="gRed"> s</span>
-        <span class="gYellow">e</span>
-        <span class="gBlue">a</span>
-        <span class="gGreen">r</span>
-        <span class="gRed">c</span>
-        <span class="gBlue">h</span>
+        <span>{{ name }}</span>
       </h1>
       <p id="splash"></p>
       <div class="search-box">
