--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <link rel="icon" href="/static/icon.png" type="image/png">
     <link rel="search" type="application/opensearchdescription+xml" title="The Big Bang" href="/opensearch.xml">
     <!-- <title>Big Bang Search</title> -->
-    <title>New Tab</title>
+    <title>{{ tab_name }}</title>
 </head>
 <body>
   <div id="pageContent">
