--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <head>
     <!-- <link rel="stylesheet" href="/static/style.min.css"> -->
-    <link rel="icon" href="/static/icon.png" type="image/png">
+    <link rel="icon" href="/static/favicon.png" type="image/png">
     <link rel="search" type="application/opensearchdescription+xml" title="The Big Bang" href="/opensearch.xml">
     <!-- <title>Big Bang Search</title> -->
     <title>{{ tab_name }}</title>
