--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <head>
-    <link rel="icon" href="/static/favicon.png" type="image/png">
-    <link rel="search" type="application/opensearchdescription+xml" title="The Big Bang" href="/opensearch.xml">
+  <link rel="icon" href="/static/favicon.png" type="image/png">
+  <link rel="search" type="application/opensearchdescription+xml" title="The Big Bang" href="/opensearch.xml">
     <title>{{ tab_name }}</title>
 </head>
 <body>
@@ -81,5 +81,8 @@
   <div id="settingsModal">
     <h1>Settings</h1>
     <input placeholder="Search bang character">
+  </div>
+  <div class="links">
+    <a href="/privacy">Privacy Policy</a>
   </div>
 </body>
